# zync

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Directory.Build.targets  PLUGIN_CATALOG.md  README.md  index.html  install.sh  key.gpg  local-install.sh  package-lock.json  package.json  postcss.config.js  release.md  stateTasks.md  stats.html  tsconfig.agent-tests.json  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  atomic_io.rs  commands.rs  fs.rs  lib.rs  main.rs  plugins.rs  pty.rs  session.rs  shell_icons.rs  snippets.rs  ssh.rs  ssh_config.rs  ssh_parser.rs  tunnel.rs  types.rs
src-tauri/src/ai/: agent_loop.rs  agent_loop_support.rs  agent_planning.rs  brain.rs  config.rs  context.rs  model_catalog.rs  prompts.rs  tool_command_exec.rs  tool_exec_support.rs  tool_file_ops.rs  tool_schemas.rs  tools.rs  translate.rs  transport.rs  types.rs  util.rs
src-tauri/src/ghost/: manager.rs  parser.rs  ranking.rs  token.rs
src-tauri/src/sync/: collection.rs  commands.rs  commands_domains.rs  domain_hosts.rs  domain_settings.rs  domain_snippets.rs  domain_tunnels.rs  domains.rs  mod.rs  profiles.rs  provider.rs  types.rs
src-tauri/src/tunnels/: commands.rs  dynamic.rs  manager.rs  mod.rs  session_failure.rs  socks5.rs
src-tauri/src/utils/: toon.rs
src-tauri/src/vault/: commands.rs  crypto.rs  (+7 more)
src-tauri/test-fixtures/: vault_crypto_vectors.json
(+534 files in other folders)
