[package]
name = "zync"
version = "2.0.0"
description = "A modern SSH client"
authors = ["Gajendra"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
portable-pty = "0.8"
anyhow = "1.0"
async-trait = "0.1"
russh-sftp = "2.1.1"
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
whoami = "1.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"

